Pegando eventos dos botões

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -6,8 +6,24 @@
 .button {
     font-size: 1.4em;
     background-color: var(--bg-button);
-    border: none;
     border-right: var(--border-button);
     border-left: var(--border-button);
     outline: none;
+}
+
+.button:active {
+    opacity: 90%;
+}
+
+.button.double {
+    grid-column: span 2;
+}
+
+.button.triple {
+    grid-column: span 3;
+}
+
+.button.operation {
+    background-color: #FA8231;
+    color: #fff;
 }
